@@ -61,11 +61,12 @@
                                     <url>${container.url}</url>
                                     <installDir>${cargo.install.directory}/${container.name}</installDir>
                                 </zipUrlInstaller>
+                                <output>${java.io.tmpdir}/${user.name}-cargo/conf/logs/server-console.log</output>
                             </container>
                             <configuration>
                                 <home>${java.io.tmpdir}/${user.name}-cargo/conf</home>
                                 <properties>
-                                    <cargo.jvmargs>-Xms1024m -Xmx1024m</cargo.jvmargs>
+                                    <cargo.jvmargs>-Xms1024m -Xmx1024m -XX:MaxPermSize=128m</cargo.jvmargs>
                                 </properties>
                             </configuration>
                         </configuration>
@@ -239,7 +240,6 @@
         <dependency>
             <groupId>org.dbunit</groupId>
             <artifactId>dbunit</artifactId>
-            <version>2.4.1</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
